<resources>
    <string name="app_name">MobileAppy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Easy Currency Converter</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="crypto_conversion">Currency Conversion</string>
    <string name="currency_info">Currency Graphic Comparison</string>
    <string name="select">Select Currency</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount:</string>
    <string name="result">Result</string>
    <string name="date">Date</string>
    <string name="ChangeDate">Change Date</string>
    <string name="swap">Swap</string>
    <string name="compare">Compare</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="change">Change</string>
    <string name="mode">Select Mode</string>
    <string name="graph">Graph</string>
    <string name="newdescirption">Easy Currency Converter is a mobile application for android devices that allows users to convert any combination out of 200 national and over 1500 cryptocurrencies using both present and historical rates from 01.01.2000 onwards. Aside from conversion we also offer a graphic representation of how a currency has fluctuated through time when compared to another.</string>
    <string name="get_started">Get Started</string>
</resources>